force-app/main/default/objects/CompProfTest__c/CompProfTest__c.object-meta.xml
<CustomObject>
    <description>This is just a test object created to test the working of New Compare Profile option in ARM.</description>
    <label>CompProfTest</label>
    <nameField>
        <label>CompProfTest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CompProfTests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>