force-app/main/default/objects/CompProfTest__c/fields/ARM_DataLoader_Module__c.field-meta.xml
<CustomField>
    <fullName>ARM_DataLoader_Module__c</fullName>
    <description>This is another custom field to test</description>
    <label>ARM DataLoader Module</label>
    <length>30</length>
    <type>Text</type>
</CustomField>