force-app/main/default/objects/CompProfTest__c/fields/ARM_deployment_Module__c.field-meta.xml
<CustomField>
    <fullName>ARM_deployment_Module__c</fullName>
    <description>This is also a test field created to test the working of a module in ARM</description>
    <label>ARM deployment Module</label>
    <length>30</length>
    <type>Text</type>
</CustomField>