force-app/main/default/objects/CompProfTest__c/fields/Test_Sample_Object__c.field-meta.xml
<CustomField>
    <fullName>Test_Sample_Object__c</fullName>
    <description>This is a sample object to test the working of a module</description>
    <label>Test Sample Object</label>
    <length>30</length>
    <type>Text</type>
</CustomField>